tests/snapshots/integration__integration_tests__step_alias__config_alias_show_lists_all.snap
---
source: tests/integration_tests/step_alias.rs
info:
  program: wt
  args:
    - config
    - alias
    - show
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_MOCK_CONFIG_DIR: "[TEST_MOCK_CONFIG]"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
[2m○[22m Alias [1mdeploy[22m (user):
[107m [0m [2m[0m[2m[34mecho[0m[2m from user[0m
[2m○[22m Alias [1mdeploy[22m (project):
[107m [0m [2m[0m[2m[34mecho[0m[2m from project[0m
[2m○[22m Alias [1mgreet[22m (user):
[107m [0m [2m[0m[2m[34mecho[0m[2m hi [0m[2m[32m{{[0m[2m branch [0m[2m[32m}}[0m
[2m○[22m Alias [1mlist[22m (project):
[107m [0m [2m[0m[2m[34mecho[0m[2m custom list[0m
[2m○[22m Alias [1monly-project[22m (project):
[107m [0m [2m[0m[2m[34mecho[0m[2m p[0m

----- stderr -----
[33m▲[39m [33mAlias [1mlist[22m is shadowed by built-in [1mwt list[22m[39m
